# aau

./: .gitignore  LICENSE  README.md  SensorRobP1Mega.ino  SensorRobP1Nano.ino  deminingUI.cpp  mappingUI.cpp  primaryICV1.0.0.0.ino  safetyICV1.0.0.0.ino  safetyIO.h  sensorData.h  sensorIO.h  sensorUI.cpp  systemMonitor.cpp
.github/workflows/: Discord.yml  main.yml
rpws/: code.tex  mapInfo.txt  mapInfo2.txt  mapInfoConvertion.txt  mapInfoLocation.txt
rpws/.catkin_tools/profiles/default/: devel_collisions.txt
rpws/src/kobuki_test/: CMakeLists.txt
rpws/src/kobuki_test/src/: charlie_test.cpp  kobuki_test.cpp
rpws/src/location_monitor/: CMakeLists.txt
rpws/src/location_monitor/msg/: LandmarkDistance.msg
rpws/src/location_monitor/src/: location_monitor.cpp
rpws/src/my_rapps_tutorial/: CMakeLists.txt  package.xml
rpws/src/my_rapps_tutorial/apps/babbler/: babbler.interface  babbler.launch  babbler.parameters  babbler.rapp
rpws/src/my_rapps_tutorial/scripts/: babbler.py
rpws/src/project_ros/: CMakeLists.txt
rpws/src/project_ros/config/: default.yaml
rpws/src/project_ros/include/pr_map/: PRMap.hpp  PRMapConvertion.hpp  PRMapLocation.hpp
rpws/src/project_ros/include/pr_movement/: PRMovement.hpp
rpws/src/project_ros/include/pr_scan/: PRScan.hpp
rpws/src/project_ros/include/pr_test_subscriber/: PRTestSubscriber.hpp
rpws/src/project_ros/include/project_ros_movement/: ProjectRosMovement.hpp
rpws/src/project_ros/include/project_ros_test_subscriber/: ProjectRosTestSubscriber.hpp
rpws/src/project_ros/include/test/: Test.hpp
rpws/src/project_ros/launch/: project_ros_bringup.txt
rpws/src/project_ros/src/: PRMap.cpp  PRMapConvertion.cpp  PRMapLocation.cpp  PRMovement.cpp  PRScan.cpp  PRTestSubscriber.cpp  ProjectRosMovement.cpp  ProjectRosTestSubscriber.cpp  Test.cpp  main.cpp
rpws/src/ros_project/: CMakeLists.txt  package.xml
rpws/src/ros_tutorials_topic/: CMakeLists.txt  package.xml
rpws/src/ros_tutorials_topic/msg/: MsgTutorial.msg
rpws/src/ros_tutorials_topic/src/: topic_publisher.cpp  topic_subscriber.cpp
rpws/src/turtlesim_games/: CMakeLists.txt
rpws/src/turtlesim_games/src/: make_box.cpp  vacuum.cpp
tex/: P1 RC 2.0.tex  appendices.tex  glossary.tex  referencer.bib
tex/01 - Front/: frontpage.tex  preface.tex  titlepage.tex
tex/02 - Sections/: 00-introduction.tex  01-problem-analysis.tex  02-casualties.tex  021-theFocusOnTheIssue.tex  03-analyses.tex  03-theFocusOnTheIssue.tex  03x-phys_geometry.tex  04-Mines_and_specifications.tex  04-analyses.tex  05-currentMarket.tex  05.5-technology.tex  06-finalProblemFormulation.tex  06-requirements.tex  06-requirements_new.tex  06.5-technology.tex  07-description.tex  07-requirements_new.tex  07-requirements_old.tex  08-delimitations.tex  08-solution-proposal.tex  09-finalProblemFormulation.tex  09-prototype-requirements.tex  10-prototype-solution.tex  11-operation-manual.tex  14-testing.tex  calculations.tex  going_to_merge_somewher.tex
tex/90 - Setup/: macros.tex  preamble.tex
